# juliet

./: .gitignore  GEMINI.md  LICENSE  README.md  main.py  pyproject.toml  test.py  tests.py
isos/clappy/: conversations.yaml  instructions.yaml
isos/juliet/: instructions.yaml
isos/moriarty/: instructions.yaml
isos/sherlock/: instructions.yaml
isos/sherlock/fine-tuning/: The Adventures of Sherlock Holmes.txt
src/: cli.py  clients.py  context.py  delete_collection.py  extract_docs.py  fact_store.py  files_handler.py  instructions.py  iso.py  main.py  messages.py  params.py
workspace/: test.py
