[project]
name = "juliet"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "chromadb>=1.1.0",
    "ebooklib>=0.19",
    "openai>=1.109.1",
    "pymupdf>=1.26.4",
    "pyyaml>=6.0.2",
    "requests>=2.32.5",
    "rich>=14.1.0",
    "sentence-transformers>=5.1.1",
    "textual>=6.1.0",
    "transformers>=4.56.2",
]
